feat: Add output types
Few line magic

--- a/templates/type_alias.tmpl
+++ b/templates/type_alias.tmpl
@@ -1,1 +1,1 @@
-type {{ .Name }} = { {{ range .Parameters }}{{ .Name }}: {{if .Array }}Array{{ .Type | generic }};{{else}}{{ .Type }};{{end}} {{end}}};
+export type {{ .Name }} = { {{ range .Parameters }}{{ .Name }}: {{if .Array }}Array{{ .Type | generic }};{{else}}{{ .Type }};{{end}} {{end}}};
